--- a/metadata.yaml
+++ b/metadata.yaml
@@ -44,5 +44,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PN'
 - !lcsh 'Literature -- Collections'
+- GITenberg
 title: Library of the World's Best literature, Ancient and Modern, Vol. 12
 url: http://www.gutenberg.org/ebooks/32308
